# IPL-prediction-engine

./: Ipl_predictor_test_collection.postman_collection  README.md  iplpredictor.ipynb
ipl-mlops/: .gitignore  Dockerfile  pyproject.toml
ipl-mlops/app/: loader.py  main.py  schemas.py
ipl-mlops/app/routes/: predict.py  ui.py
ipl-mlops/app/static/css/: style.css
ipl-mlops/app/templates/: about.html  base.html  home.html  test.html  upload.html
ipl-mlops/config/: data_config.yaml  logging.yaml  model_config.yaml
ipl-mlops/data/: template.csv
ipl-mlops/ml_build/: config_loader.py  logger.py  main.py
ipl-mlops/ml_build/services/: pipeline_builder.py  pipelinerunner.py  preprocessing.py  testing.py  training.py
ipl-mlops/models/: grid_cv_ipl_rf_model_classification_report.txt  grid_cv_ipl_rf_model_sample_prediction.txt
